# yt-to-knowledge

./: .gitignore  README.md  main.py  pyproject.toml
src/: downloader.py  formatter.py  generators.py  llm.py  main.py  model_loader.py  transcriber.py  translator.py  utils.py
src/app/: mp3_to_wav.py  transcription.py  translate.py
src/app/yt_utils/: getYtSubtitles.py
